fix padding when responsive on mobile

--- a/projects/coders-x-login/css/styles.css
+++ b/projects/coders-x-login/css/styles.css
@@ -182,3 +182,10 @@ a:hover {
     width: 100%;
   }
 }
+
+@media screen and (max-width: 576px) {
+  .login {
+    padding-left: 3.2rem;
+    padding-right: 3.2rem;
+  }
+}
